fixed scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@
     flex-direction: column;
     justify-content: space-between;
 }
-.main-container{
+.page-container{
     height: calc(100vh - 100px);
 }
 
@@ -107,14 +107,19 @@ footer{
     padding: 0 10px 50px;  
 }
 /* main */
-main{
-    overflow: hidden;
+.main-container{
     width: 90%;
     margin: 0 auto;
+    height: 100%;
+}
+main{
+    overflow: scroll;
+    height: 100%;
 }
 .container-music-cards{
     display: flex;
     flex-wrap: wrap;
+    gap: 10%;
 }
 .title-section{
     color: white;
@@ -122,7 +127,7 @@ main{
     font-size: 20px;
 }
 .music-card{
-    margin: 30px 0;
+    margin: 30px 0px;
 }
 .music-card-img img{
     width: 200px;
